JS challenges complete

--- a/week_8_and_9/2_JavaScript/jquery/jquery_example.html
+++ b/week_8_and_9/2_JavaScript/jquery/jquery_example.html
@@ -3,7 +3,7 @@
 <head>
   <title>DOM manipulation with jQuery</title>
  
-  <script src="https://github.com/axprin/phase_0_unit_3/blob/master/week_8_and_9/2_JavaScript/jquery/jquery_example.js"></script>
+  <script src="https://raw.githubusercontent.com/axprin/phase_0_unit_3/master/week_8_and_9/2_JavaScript/jquery/jquery_example.js"></script>
  
   <script type="text/javascript" src="jquery_example.js"></script>
 </head>
